# WRF

./: CMakeLists.txt
.ci/: wrf_compilation_tests-cmake.json  wrf_compilation_tests-make.json  wrf_em_chem_tests.json  wrf_em_ideal_tests.json  wrf_em_real_tests.json
.ci/tests/: buildCMake.sh
.github/workflows/: ci.yml  entry_point.yml  test_workflow.yml  wrf_test.yml
.workflow/: builds.py
.workflow/hosts/: derecho.json
.workflow/scripts/: buildCMake.sh
arch/: configure.defaults  submodule.template.F  subroutine_split.py
cmake/template/: arch_config.cmake
frame/: CMakeLists.txt  module_alloc_space.h  module_alloc_space_0.F  module_alloc_space_1.F  module_alloc_space_2.F  module_alloc_space_3.F  module_alloc_space_4.F  module_alloc_space_5.F  module_alloc_space_6.F  module_alloc_space_7.F  module_alloc_space_8.F  module_alloc_space_9.F  module_comm_dm_0.F  module_comm_dm_1.F  module_comm_dm_2.F  module_comm_dm_3.F  module_comm_dm_4.F  module_comm_nesting_dm.F  module_configure.F  module_scalar_tables.F  submodule_alloc_space.h  submodule_alloc_space_0.F  submodule_alloc_space_1.F  submodule_alloc_space_2.F  submodule_alloc_space_3.F  submodule_alloc_space_4.F  submodule_alloc_space_5.F  submodule_alloc_space_6.F  submodule_alloc_space_7.F  submodule_alloc_space_8.F  submodule_alloc_space_9.F  submodule_configure_alt.F  submodule_configure_init.F
main/: CMakeLists.txt
phys/: CMakeLists.txt  Makefile
share/: mediation_integrate.F
tools/: CMakeLists.txt
